--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spice-avahi-openrc (0.0.2)  nitrux; urgency=medium
+
+  * Remove wrong syntax in avahi-daemon.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Fri, 08 Dec 2023 04:23:00 -0500
+
 spice-avahi-openrc (0.0.1)  nitrux; urgency=medium
 
   * Create package.
