--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spice-avahi-openrc (0.0.3)  nitrux; urgency=medium
+
+  * Rename scripts.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Tue, 04 Jun 2024 05:07:00 -0500
+
 spice-avahi-openrc (0.0.2)  nitrux; urgency=medium
 
   * Remove wrong syntax in avahi-daemon.
